      - New option 'cupt::update::generate-index-of-index'.
      - New option 'cupt::console::show-progress-messages'.
      - The option 'cupt::languages::indexes' has now default value
        'environment,en' to always download English translations regardless of
        the current locale.
      - Recognize and use the option 'dir::ignore-files-silently'.
        (Closes: #697248)
    - cache/version:
      - [API break] 'operator==': removed, versions can be now compared by
        pointers' values.
      - [API break] Source, InitializationParameters: replaced shared_ptr's
        with pointers.
      - [API break] InitializationParameters: removed.
    - system/resolver:
      - [API break] SuggestedPackage: new field 'automaticallyInstalledFlag',
        removed old field 'manuallySelected'.
      - New method 'setAutomaticallyInstalledFlag'.
      - 'SuggestedPackage': new field 'reasonPackageNames'.
    - system/worker:
      - [API break] 'setPackagePurgeFlag': now is persistent, and should be
        called before 'setDesiredState'.
      - [ABI break] 'Action::Type' new enum value 'Reinstall'.
      - 'updateReleaseAndIndexData': use threads instead of forking.
    - cache/binarypackage:
      - 'getInstalledVersion': significant speed-up.
      - New methods begin() and end().
    - cache/binaryversion:
      - [API break] Fields 'shortDescription' and 'longDescription' are
        replaced with a new field 'description'.
      - [API break] 'parseFromFile': removed.
    - cache/sourceversion:
      - [API break] 'parseFromFile': removed.
    - cache/sourcepackage:
      - New methods begin() and end().
      - Stopped filtering out packages with unapplicable binary architectures.
    - file:
      - [API break] Not a public API anymore.
    - system/state:
      - New method 'getArchitecture'.
    - download/manager:
      - Removed 'alive pings'.
      - Notify the download progress of download sizes earlier. This improves